--- a/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
+++ b/apps/browser/src/vault/popup/components/vault/vault-v2.component.html
@@ -1,12 +1,12 @@
 <popup-page>
   <popup-header slot="header" [pageTitle]="'vault' | i18n">
     <ng-container slot="end">
+      <!-- TODO PM-6826: add selectedVault query param -->
       <a
         bitButton
         buttonType="primary"
         type="button"
         routerLink="/add-cipher"
-        [queryParams]="{ selectedVault: this.selectedOrgId }"
         class="tw-no-underline"
       >
         <i class="bwi bwi-plus-f" aria-hidden="true"></i>
