--- a/bitwarden_license/bit-web/src/app/billing/providers/provider-payment-form.component.html
+++ b/bitwarden_license/bit-web/src/app/billing/providers/provider-payment-form.component.html
@@ -19,12 +19,6 @@
           {{ "payPal" | i18n }}
         </bit-label>
       </bit-radio-button>
-      <bit-radio-button id="credit-payment-method" [value]="PaymentMethodType.Credit">
-        <bit-label>
-          <i class="bwi bwi-fw bwi-dollar" aria-hidden="true"></i>
-          {{ "accountCredit" | i18n }}
-        </bit-label>
-      </bit-radio-button>
     </bit-radio-group>
   </div>
   <ng-container *ngIf="formGroup.value.paymentMethod === PaymentMethodType.Card">
@@ -66,9 +60,56 @@
     </div>
   </ng-container>
   <ng-container *ngIf="formGroup.value.paymentMethod === PaymentMethodType.BankAccount">
+    <div class="tw-grid tw-grid-cols-12 tw-gap-4" formGroupName="bankInformation">
+      <bit-form-field class="tw-col-span-4" disableMargin>
+        <bit-label>{{ "routingNumber" | i18n }}</bit-label>
+        <input
+          bitInput
+          id="routingNumber"
+          type="text"
+          formControlName="routingNumber"
+          required
+          appInputVerbatim
+        />
+      </bit-form-field>
+      <bit-form-field class="tw-col-span-4" disableMargin>
+        <bit-label>{{ "accountNumber" | i18n }}</bit-label>
+        <input
+          bitInput
+          id="accountNumber"
+          type="text"
+          formControlName="accountNumber"
+          required
+          appInputVerbatim
+        />
+      </bit-form-field>
+      <bit-form-field class="tw-col-span-4 tw-row-start-2" disableMargin>
+        <bit-label>{{ "accountHolderName" | i18n }}</bit-label>
+        <input
+          id="accountHolderName"
+          bitInput
+          type="text"
+          formControlName="accountHolderName"
+          required
+          appInputVerbatim
+        />
+      </bit-form-field>
+      <bit-form-field class="tw-col-span-4 tw-row-start-2" disableMargin>
+        <bit-label>{{ "bankAccountType" | i18n }}</bit-label>
+        <bit-select id="accountHolderType" formControlName="accountHolderType" required>
+          <bit-option value="" label="-- {{ 'select' | i18n }} --"></bit-option>
+          <bit-option value="company" label="{{ 'bankAccountTypeCompany' | i18n }}"></bit-option>
+          <bit-option
+            value="individual"
+            label="{{ 'bankAccountTypeIndividual' | i18n }}"
+          ></bit-option>
+        </bit-select>
+      </bit-form-field>
+    </div>
   </ng-container>
-  <ng-container *ngIf="formGroup.value.paymentMethod === PaymentMethodType.PayPal"> </ng-container>
-  <ng-container *ngIf="formGroup.value.paymentMethod === PaymentMethodType.Credit"> </ng-container>
+  <ng-container *ngIf="formGroup.value.paymentMethod === PaymentMethodType.PayPal">
+    <h1>TODO</h1>
+  </ng-container>
   <div class="tw-mt-6">
     <button bitButton bitFormButton buttonType="primary" type="submit">
       {{ "submit" | i18n }}
