--- a/bitwarden_license/bit-web/src/app/billing/providers/provider-payment-information.component.html
+++ b/bitwarden_license/bit-web/src/app/billing/providers/provider-payment-information.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
 <h2>Hello</h2>
-<app-provider-payment-form></app-provider-payment-form>
+<app-provider-payment-form [providerId]="providerId"></app-provider-payment-form>
