--- a/libs/auth/src/angular/registration/registration-start/registration-start.component.html
+++ b/libs/auth/src/angular/registration/registration-start/registration-start.component.html
@@ -1,42 +1,73 @@
 <div class="tw-max-w-[28rem] tw-min-w-[28rem]">
-  <form [formGroup]="formGroup" [bitSubmit]="submit">
-    <bit-form-field>
-      <bit-label>{{ "emailAddress" | i18n }}</bit-label>
-      <input
-        id="register-start_form_input_email"
-        bitInput
-        type="email"
-        formControlName="email"
-        [attr.readonly]="emailReadonly ? true : null"
-      />
-    </bit-form-field>
+  <ng-container *ngIf="state === RegistrationStartState.USER_DATA_ENTRY">
+    <form [formGroup]="formGroup" [bitSubmit]="submit">
+      <bit-form-field>
+        <bit-label>{{ "emailAddress" | i18n }}</bit-label>
+        <input
+          id="register-start_form_input_email"
+          bitInput
+          type="email"
+          formControlName="email"
+          [attr.readonly]="emailReadonly ? true : null"
+        />
+      </bit-form-field>
 
-    <bit-form-field>
-      <bit-label>{{ "name" | i18n }}</bit-label>
-      <input id="register-start_form_input_name" bitInput type="text" formControlName="name" />
-    </bit-form-field>
+      <bit-form-field>
+        <bit-label>{{ "name" | i18n }}</bit-label>
+        <input id="register-start_form_input_name" bitInput type="text" formControlName="name" />
+      </bit-form-field>
 
-    <bit-form-control>
-      <input
-        id="register-start-form-input-accept-policies"
-        type="checkbox"
-        bitCheckbox
-        formControlName="acceptPolicies"
-      />
-      <bit-label for="register-start-form-input-accept-policies">
-        {{ "acceptPolicies" | i18n }}<br />
-        <a href="https://bitwarden.com/terms/" target="_blank" rel="noreferrer">{{
-          "termsOfService" | i18n
-        }}</a
-        >,
-        <a href="https://bitwarden.com/privacy/" target="_blank" rel="noreferrer">{{
-          "privacyPolicy" | i18n
-        }}</a>
-      </bit-label>
-    </bit-form-control>
+      <bit-form-control>
+        <input
+          id="register-start-form-input-accept-policies"
+          type="checkbox"
+          bitCheckbox
+          formControlName="acceptPolicies"
+        />
+        <bit-label for="register-start-form-input-accept-policies">
+          {{ "acceptPolicies" | i18n }}<br />
+          <a href="https://bitwarden.com/terms/" target="_blank" rel="noreferrer">{{
+            "termsOfService" | i18n
+          }}</a
+          >,
+          <a href="https://bitwarden.com/privacy/" target="_blank" rel="noreferrer">{{
+            "privacyPolicy" | i18n
+          }}</a>
+        </bit-label>
+      </bit-form-control>
 
-    <button [block]="true" type="submit" buttonType="primary" bitButton bitFormButton>
-      {{ "continue" | i18n }}
-    </button>
-  </form>
+      <button [block]="true" type="submit" buttonType="primary" bitButton bitFormButton>
+        {{ "continue" | i18n }}
+      </button>
+
+      <bit-error-summary *ngIf="showErrorSummary" [formGroup]="formGroup"></bit-error-summary></form
+  ></ng-container>
+  <ng-container *ngIf="state === RegistrationStartState.CHECK_EMAIL">
+    <div class="tw-flex tw-flex-col tw-items-center tw-justify-center">
+      <i
+        class="bwi bwi-envelope bwi-fw tw-text-primary-600 tw-text-6xl tw-mb-3"
+        aria-hidden="true"
+      ></i>
+      <h2 bitTypography="h2" class="tw-font-bold tw-mb-3">{{ "checkYourEmail" | i18n }}</h2>
+
+      <p bitTypography="body1" class="tw-text-center tw-mb-3">
+        {{ "followTheLinkInTheEmailSentTo" | i18n }}
+        <span class="tw-font-bold">{{ email.value }}</span>
+        {{ "andContinueCreatingYourAccount" | i18n }}
+      </p>
+
+      <p bitTypography="helper" class="tw-text-center">
+        {{ "noEmail" | i18n }}
+        <a
+          bitLink
+          linkType="primary"
+          class="tw-cursor-pointer"
+          (click)="state = RegistrationStartState.USER_DATA_ENTRY"
+        >
+          {{ "goBack" | i18n }}
+        </a>
+        {{ "toEditYourEmailAddress" | i18n }}
+      </p>
+    </div>
+  </ng-container>
 </div>
