Create MoreFromBitwardenPage component
Create new component
Add button to navigate to new component from about-page
Add routing for new component

--- a/apps/browser/src/tools/popup/settings/about-page/about-page.component.html
+++ b/apps/browser/src/tools/popup/settings/about-page/about-page.component.html
@@ -60,6 +60,14 @@
       <button
         type="button"
         class="box-content-row box-content-row-flex text-default"
+        routerLink="/more-from-bitwarden"
+      >
+        <div class="row-main">{{ "moreFromBitwarden" | i18n }}</div>
+        <i class="bwi bwi-angle-right bwi-lg row-sub-icon" aria-hidden="true"></i>
+      </button>
+      <button
+        type="button"
+        class="box-content-row box-content-row-flex text-default"
         appStopClick
         (click)="rate()"
       >
