PM-5086 - Refactor self hosted conditional + actually hide the checkbox if it is self hosted.

--- a/libs/auth/src/angular/registration/registration-start/registration-start.component.html
+++ b/libs/auth/src/angular/registration/registration-start/registration-start.component.html
@@ -17,7 +17,7 @@
         <input id="register-start_form_input_name" bitInput type="text" formControlName="name" />
       </bit-form-field>
 
-      <bit-form-control>
+      <bit-form-control *ngIf="!isSelfHost">
         <input
           id="register-start-form-input-accept-policies"
           type="checkbox"
