PM-2172 Addressed review comments

--- a/apps/web/src/app/admin-console/organizations/members/components/member-dialog/member-dialog.component.html
+++ b/apps/web/src/app/admin-console/organizations/members/components/member-dialog/member-dialog.component.html
@@ -290,6 +290,7 @@
               <bit-label>
                 {{ "accessAllCollectionsDesc" | i18n }}
                 <a
+                  bitLink
                   target="_blank"
                   rel="noreferrer"
                   appA11yTitle="{{ 'learnMore' | i18n }}"
