--- a/apps/browser/src/tools/popup/settings/about-page/more-from-bitwarden-page.component.html
+++ b/apps/browser/src/tools/popup/settings/about-page/more-from-bitwarden-page.component.html
@@ -24,6 +24,15 @@
         <div class="row-main">{{ "bitwardenAuthenticator" | i18n }}</div>
         <i class="bwi bwi-external-link bwi-lg row-sub-icon" aria-hidden="true"></i>
       </button>
+      <button
+        type="button"
+        class="box-content-row box-content-row-flex text-default"
+        appStopClick
+        (click)="openSecretsManagerPage()"
+      >
+        <div class="row-main">{{ "bitwardenSecretsManager" | i18n }}</div>
+        <i class="bwi bwi-external-link bwi-lg row-sub-icon" aria-hidden="true"></i>
+      </button>
     </div>
   </div>
 </main>
