--- a/apps/browser/src/tools/popup/settings/about-page/more-from-bitwarden-page.component.html
+++ b/apps/browser/src/tools/popup/settings/about-page/more-from-bitwarden-page.component.html
@@ -15,6 +15,16 @@
 <main tabindex="-1">
   <div class="box list">
     <div class="box-content single-line">
+      <div *ngIf="!(canAccessPremium$ | async)">
+        <button
+          type="button"
+          class="box-content-row box-content-row-flex text-default"
+          routerLink="/premium"
+        >
+          <div class="row-main">{{ "premiumMembership" | i18n }}</div>
+          <i class="bwi bwi-angle-right bwi-lg row-sub-icon" aria-hidden="true"></i>
+        </button>
+      </div>
       <button
         type="button"
         class="box-content-row box-content-row-flex text-default"
