Add popout-button to about-page

--- a/apps/browser/src/tools/popup/settings/about-page/about-page.component.html
+++ b/apps/browser/src/tools/popup/settings/about-page/about-page.component.html
@@ -8,7 +8,9 @@
   <h1 class="center">
     <span class="title">{{ "about" | i18n }}</span>
   </h1>
-  <div class="right"></div>
+  <div class="right">
+    <app-pop-out></app-pop-out>
+  </div>
 </header>
 <main tabindex="-1">
   <div class="box list">
