Move popout-button on setting to the right

--- a/apps/browser/src/tools/popup/settings/settings.component.html
+++ b/apps/browser/src/tools/popup/settings/settings.component.html
@@ -1,11 +1,11 @@
 <app-header>
-  <div class="left">
-    <app-pop-out></app-pop-out>
-  </div>
+  <div class="left"></div>
   <h1 class="center">
     <span class="title">{{ "settings" | i18n }}</span>
   </h1>
-  <div class="right"></div>
+  <div class="right">
+    <app-pop-out></app-pop-out>
+  </div>
 </app-header>
 <main tabindex="-1">
   <div class="box list">
