PM-4978 Addressed review comments

--- a/apps/web/src/app/auth/settings/account/profile.component.html
+++ b/apps/web/src/app/auth/settings/account/profile.component.html
@@ -11,11 +11,11 @@
     <div class="tw-col-span-6">
       <bit-form-field>
         <bit-label>{{ "name" | i18n }}</bit-label>
-        <input bitInput type="text" formControlName="name" />
+        <input bitInput formControlName="name" />
       </bit-form-field>
       <bit-form-field>
         <bit-label>{{ "email" | i18n }}</bit-label>
-        <input bitInput type="text" formControlName="email" readonly />
+        <input bitInput formControlName="email" readonly />
       </bit-form-field>
     </div>
     <div class="tw-col-span-6">
