--- a/apps/browser/src/tools/popup/settings/about-page/more-from-bitwarden-page.component.html
+++ b/apps/browser/src/tools/popup/settings/about-page/more-from-bitwarden-page.component.html
@@ -29,6 +29,15 @@
         type="button"
         class="box-content-row box-content-row-flex text-default"
         appStopClick
+        (click)="openFreeBitwardenFamiliesPage()"
+      >
+        <div class="row-main">{{ "freeBitwardenFamilies" | i18n }}</div>
+        <i class="bwi bwi-external-link bwi-lg row-sub-icon" aria-hidden="true"></i>
+      </button>
+      <button
+        type="button"
+        class="box-content-row box-content-row-flex text-default"
+        appStopClick
         (click)="openBitwardenForBusinessPage()"
       >
         <div class="row-main">{{ "bitwardenForBusiness" | i18n }}</div>
