--- a/bitwarden_license/bit-web/src/app/billing/providers/provider-payment-form.component.html
+++ b/bitwarden_license/bit-web/src/app/billing/providers/provider-payment-form.component.html
@@ -1,118 +1,131 @@
 <form [formGroup]="formGroup" [bitSubmit]="submit">
-  <div class="tw-mb-4 tw-text-lg">
-    <bit-radio-group formControlName="paymentMethod">
-      <bit-radio-button id="card-payment-method" [value]="PaymentMethodType.Card">
-        <bit-label>
-          <i class="bwi bwi-fw bwi-credit-card" aria-hidden="true"></i>
-          {{ "creditCard" | i18n }}
-        </bit-label>
-      </bit-radio-button>
-      <bit-radio-button id="bank-payment-method" [value]="PaymentMethodType.BankAccount">
-        <bit-label>
-          <i class="bwi bwi-fw bwi-bank" aria-hidden="true"></i>
-          {{ "bankAccount" | i18n }}
-        </bit-label>
-      </bit-radio-button>
-      <bit-radio-button id="paypal-payment-method" [value]="PaymentMethodType.PayPal">
-        <bit-label>
-          <i class="bwi bwi-fw bwi-paypal" aria-hidden="true"></i>
-          {{ "payPal" | i18n }}
-        </bit-label>
-      </bit-radio-button>
-    </bit-radio-group>
-  </div>
-  <ng-container *ngIf="formGroup.value.paymentMethod === PaymentMethodType.Card">
-    <div class="tw-grid tw-grid-cols-12 tw-gap-4 tw-mb-4">
-      <div class="tw-col-span-4">
-        <label for="stripe-card-number">{{ "number" | i18n }}</label>
-        <div id="stripe-card-number" class="form-control stripe-form-control"></div>
+  <bit-dialog dialogSize="large">
+    <span bitDialogTitle class="tw-font-semibold">
+      {{ "addPaymentMethod" | i18n }}
+    </span>
+    <ng-container bitDialogContent>
+      <div class="tw-mb-4 tw-text-lg">
+        <bit-radio-group formControlName="paymentMethod">
+          <bit-radio-button id="card-payment-method" [value]="PaymentMethodType.Card">
+            <bit-label>
+              <i class="bwi bwi-fw bwi-credit-card" aria-hidden="true"></i>
+              {{ "creditCard" | i18n }}
+            </bit-label>
+          </bit-radio-button>
+          <bit-radio-button id="bank-payment-method" [value]="PaymentMethodType.BankAccount">
+            <bit-label>
+              <i class="bwi bwi-fw bwi-bank" aria-hidden="true"></i>
+              {{ "bankAccount" | i18n }}
+            </bit-label>
+          </bit-radio-button>
+          <bit-radio-button id="paypal-payment-method" [value]="PaymentMethodType.PayPal">
+            <bit-label>
+              <i class="bwi bwi-fw bwi-paypal" aria-hidden="true"></i>
+              {{ "payPal" | i18n }}
+            </bit-label>
+          </bit-radio-button>
+        </bit-radio-group>
       </div>
-      <div class="tw-col-span-8 tw-flex tw-items-end">
-        <img
-          src="../../images/cards.png"
-          alt="Visa, MasterCard, Discover, AmEx, JCB, Diners Club, UnionPay"
-          width="323"
-          height="32"
-        />
-      </div>
-      <div class="tw-col-span-4">
-        <label for="stripe-card-expiry">{{ "expiration" | i18n }}</label>
-        <div id="stripe-card-expiry" class="form-control stripe-form-control"></div>
-      </div>
-      <div class="tw-col-span-4">
-        <div class="tw-flex">
-          <label for="stripe-card-cvc">
-            {{ "securityCode" | i18n }}
-          </label>
-          <a
-            href="https://www.cvvnumber.com/cvv.html"
-            tabindex="-1"
-            target="_blank"
-            rel="noreferrer"
-            class="ml-auto"
-            appA11yTitle="{{ 'learnMore' | i18n }}"
-          >
-            <i class="bwi bwi-question-circle" aria-hidden="true"></i>
-          </a>
+      <ng-container *ngIf="formGroup.value.paymentMethod === PaymentMethodType.Card">
+        <div class="tw-grid tw-grid-cols-12 tw-gap-4 tw-mb-4">
+          <div class="tw-col-span-5">
+            <label for="stripe-card-number">{{ "number" | i18n }}</label>
+            <div id="stripe-card-number" class="form-control stripe-form-control"></div>
+          </div>
+          <div class="tw-col-span-7 tw-flex tw-items-end">
+            <img
+              src="../../images/cards.png"
+              alt="Visa, MasterCard, Discover, AmEx, JCB, Diners Club, UnionPay"
+              width="323"
+              height="32"
+            />
+          </div>
+          <div class="tw-col-span-5">
+            <label for="stripe-card-expiry">{{ "expiration" | i18n }}</label>
+            <div id="stripe-card-expiry" class="form-control stripe-form-control"></div>
+          </div>
+          <div class="tw-col-span-5">
+            <div class="tw-flex">
+              <label for="stripe-card-cvc">
+                {{ "securityCode" | i18n }}
+              </label>
+              <a
+                href="https://www.cvvnumber.com/cvv.html"
+                tabindex="-1"
+                target="_blank"
+                rel="noreferrer"
+                class="ml-auto"
+                appA11yTitle="{{ 'learnMore' | i18n }}"
+              >
+                <i class="bwi bwi-question-circle" aria-hidden="true"></i>
+              </a>
+            </div>
+            <div id="stripe-card-cvc" class="form-control stripe-form-control"></div>
+          </div>
         </div>
-        <div id="stripe-card-cvc" class="form-control stripe-form-control"></div>
-      </div>
-    </div>
-  </ng-container>
-  <ng-container *ngIf="formGroup.value.paymentMethod === PaymentMethodType.BankAccount">
-    <div class="tw-grid tw-grid-cols-12 tw-gap-4" formGroupName="bankInformation">
-      <bit-form-field class="tw-col-span-4" disableMargin>
-        <bit-label>{{ "routingNumber" | i18n }}</bit-label>
-        <input
-          bitInput
-          id="routingNumber"
-          type="text"
-          formControlName="routingNumber"
-          required
-          appInputVerbatim
-        />
-      </bit-form-field>
-      <bit-form-field class="tw-col-span-4" disableMargin>
-        <bit-label>{{ "accountNumber" | i18n }}</bit-label>
-        <input
-          bitInput
-          id="accountNumber"
-          type="text"
-          formControlName="accountNumber"
-          required
-          appInputVerbatim
-        />
-      </bit-form-field>
-      <bit-form-field class="tw-col-span-4 tw-row-start-2" disableMargin>
-        <bit-label>{{ "accountHolderName" | i18n }}</bit-label>
-        <input
-          id="accountHolderName"
-          bitInput
-          type="text"
-          formControlName="accountHolderName"
-          required
-          appInputVerbatim
-        />
-      </bit-form-field>
-      <bit-form-field class="tw-col-span-4 tw-row-start-2" disableMargin>
-        <bit-label>{{ "bankAccountType" | i18n }}</bit-label>
-        <bit-select id="accountHolderType" formControlName="accountHolderType" required>
-          <bit-option value="" label="-- {{ 'select' | i18n }} --"></bit-option>
-          <bit-option value="company" label="{{ 'bankAccountTypeCompany' | i18n }}"></bit-option>
-          <bit-option
-            value="individual"
-            label="{{ 'bankAccountTypeIndividual' | i18n }}"
-          ></bit-option>
-        </bit-select>
-      </bit-form-field>
-    </div>
-  </ng-container>
-  <ng-container *ngIf="formGroup.value.paymentMethod === PaymentMethodType.PayPal">
-    <h1>TODO</h1>
-  </ng-container>
-  <div class="tw-mt-6">
-    <button bitButton bitFormButton buttonType="primary" type="submit">
-      {{ "submit" | i18n }}
-    </button>
-  </div>
+      </ng-container>
+      <ng-container *ngIf="formGroup.value.paymentMethod === PaymentMethodType.BankAccount">
+        <div class="tw-grid tw-grid-cols-12 tw-gap-4" formGroupName="bankInformation">
+          <bit-form-field class="tw-col-span-6" disableMargin>
+            <bit-label>{{ "routingNumber" | i18n }}</bit-label>
+            <input
+              bitInput
+              id="routingNumber"
+              type="text"
+              formControlName="routingNumber"
+              required
+              appInputVerbatim
+            />
+          </bit-form-field>
+          <bit-form-field class="tw-col-span-6" disableMargin>
+            <bit-label>{{ "accountNumber" | i18n }}</bit-label>
+            <input
+              bitInput
+              id="accountNumber"
+              type="text"
+              formControlName="accountNumber"
+              required
+              appInputVerbatim
+            />
+          </bit-form-field>
+          <bit-form-field class="tw-col-span-6" disableMargin>
+            <bit-label>{{ "accountHolderName" | i18n }}</bit-label>
+            <input
+              id="accountHolderName"
+              bitInput
+              type="text"
+              formControlName="accountHolderName"
+              required
+              appInputVerbatim
+            />
+          </bit-form-field>
+          <bit-form-field class="tw-col-span-6" disableMargin>
+            <bit-label>{{ "bankAccountType" | i18n }}</bit-label>
+            <bit-select id="accountHolderType" formControlName="accountHolderType" required>
+              <bit-option value="" label="-- {{ 'select' | i18n }} --"></bit-option>
+              <bit-option
+                value="company"
+                label="{{ 'bankAccountTypeCompany' | i18n }}"
+              ></bit-option>
+              <bit-option
+                value="individual"
+                label="{{ 'bankAccountTypeIndividual' | i18n }}"
+              ></bit-option>
+            </bit-select>
+          </bit-form-field>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="formGroup.value.paymentMethod === PaymentMethodType.PayPal">
+        <h1>TODO</h1>
+      </ng-container>
+    </ng-container>
+    <ng-container bitDialogFooter>
+      <button bitButton bitFormButton buttonType="primary" type="submit">
+        {{ "submit" | i18n }}
+      </button>
+      <button bitButton buttonType="secondary" type="button" [bitDialogClose]="ResultType.Closed">
+        {{ "cancel" | i18n }}
+      </button>
+    </ng-container>
+  </bit-dialog>
 </form>
