--- a/bitwarden_license/bit-web/src/app/billing/providers/provider-payment-information.component.html
+++ b/bitwarden_license/bit-web/src/app/billing/providers/provider-payment-information.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<h2>Hello</h2>
-<app-provider-payment-form [providerId]="providerId"></app-provider-payment-form>
+<h2 class="spaced-header">{{ "paymentMethod" | i18n }}</h2>
+<button type="button" bitButton buttonType="secondary" [bitAction]="changePaymentMethod">
+  {{ "addPaymentMethod" | i18n }}
+</button>
