--- a/apps/browser/src/vault/popup/components/vault-v2/autofill-vault-list-items/autofill-vault-list-items.component.html
+++ b/apps/browser/src/vault/popup/components/vault-v2/autofill-vault-list-items/autofill-vault-list-items.component.html
@@ -7,6 +7,8 @@
 <ng-container *ngIf="showEmptyAutofillTip$ | async">
   <bit-section>
     <popup-section-header [title]="'autofillSuggestions' | i18n"></popup-section-header>
-    <span class="tw-text-muted">{{ "autofillSuggestionsTip" | i18n }}</span>
+    <span class="tw-text-muted tw-px-1" bitTypography="body2">{{
+      "autofillSuggestionsTip" | i18n
+    }}</span>
   </bit-section>
 </ng-container>
