--- a/bitwarden_license/bit-web/src/app/admin-console/providers/providers-layout.component.html
+++ b/bitwarden_license/bit-web/src/app/admin-console/providers/providers-layout.component.html
@@ -33,6 +33,10 @@
       *ngIf="canAccessBilling$ | async"
     >
       <bit-nav-item [text]="'subscription' | i18n" route="billing/subscription"></bit-nav-item>
+      <bit-nav-item
+        [text]="'paymentInformation' | i18n"
+        route="billing/payment-information"
+      ></bit-nav-item>
     </bit-nav-group>
     <bit-nav-item
       icon="bwi-cogs"
