--- a/libs/auth/src/angular/registration/registration-start/registration-start-secondary.component.html
+++ b/libs/auth/src/angular/registration/registration-start/registration-start-secondary.component.html
@@ -1,1 +1,3 @@
-{{ "alreadyHaveAccount" | i18n }} <a routerLink="/login">{{ "logIn" | i18n }}</a>
+<span tabindex="0"
+  >{{ "alreadyHaveAccount" | i18n }} <a routerLink="/login">{{ "logIn" | i18n }}</a></span
+>
