PM-2055 Added close to disable two factor

--- a/apps/web/src/app/auth/settings/two-factor-authenticator.component.html
+++ b/apps/web/src/app/auth/settings/two-factor-authenticator.component.html
@@ -72,7 +72,7 @@
       <button bitButton bitFormButton type="submit" buttonType="primary">
         {{ (enabled ? "disable" : "enable") | i18n }}
       </button>
-      <button bitButton bitFormButton type="button" buttonType="secondary" [bitAction]="onClose">
+      <button bitButton bitFormButton type="button" buttonType="secondary" [bitAction]="close">
         {{ "close" | i18n }}
       </button>
     </ng-container>
