--- a/libs/components/src/chip-select/chip-select.component.html
+++ b/libs/components/src/chip-select/chip-select.component.html
@@ -3,49 +3,53 @@
   bitButton
   buttonType="secondary"
   [bitMenuTriggerFor]="menu"
+  class="tw-max-w-full tw-truncate"
   #menuTrigger="menuTrigger"
 >
-  <i class="bwi {{ icon }}"></i>
-  {{ selected?.label || placeholder }}
+  <i class="bwi {{ selectedOption?.icon || placeholderIcon }}"></i>
+  {{ selectedOption?.label || placeholderText }}
   <i
-    *ngIf="!selected?.label"
+    *ngIf="!selectedOption?.label"
     class="bwi"
     [ngClass]="menuTrigger.isOpen ? 'bwi-angle-up' : 'bwi-angle-down'"
   ></i>
-  <i *ngIf="selected?.label" class="bwi bwi-close"></i>
+  <i *ngIf="selectedOption?.label" class="bwi bwi-close"></i>
 </button>
 <bit-menu #menu>
-  <button
-    type="button"
-    bitMenuItem
-    *ngIf="renderedOptions.parent"
-    (click)="viewOption(renderedOptions.parent, $event)"
-  >
-    <i class="bwi bwi-angle-left"></i>
-    Back
-  </button>
+  <div class="tw-max-h-80 tw-min-w-52">
+    <ng-container *ngIf="renderedOptions._parent">
+      <button
+        type="button"
+        bitMenuItem
+        *ngIf="renderedOptions._parent"
+        (click)="viewOption(renderedOptions._parent, $event)"
+      >
+        <i class="bwi bwi-angle-left"></i>
+        Back
+      </button>
 
-  <button
-    type="button"
-    bitMenuItem
-    *ngIf="renderedOptions.parent"
-    (click)="selectOption(renderedOptions, $event)"
-  >
-    {{ renderedOptions.label }}
-  </button>
-  <!-- <bit-menu-divider *ngIf="renderedOptions.parent"></bit-menu-divider> -->
+      <button
+        type="button"
+        bitMenuItem
+        *ngIf="renderedOptions._parent"
+        (click)="selectOption(renderedOptions, $event)"
+      >
+        {{ renderedOptions.label }}
+      </button>
+    </ng-container>
 
-  <button
-    type="button"
-    bitMenuItem
-    *ngFor="let option of renderedOptions.children"
-    (click)="option.children ? viewOption(option, $event) : selectOption(option, $event)"
-    class="tw-flex tw-justify-between tw-items-center"
-  >
-    <span class="tw-w-full tw-truncate">
-      <i *ngIf="option.icon" class="bwi {{ icon }}"></i>
-      <span [title]="option.label">{{ option.label }}</span>
-    </span>
-    <i *ngIf="option.children" class="bwi bwi-angle-right"></i>
-  </button>
+    <button
+      type="button"
+      bitMenuItem
+      *ngFor="let option of renderedOptions.children"
+      (click)="option.children ? viewOption(option, $event) : selectOption(option, $event)"
+      class="tw-flex tw-justify-between tw-items-center"
+    >
+      <span class="tw-w-full tw-truncate">
+        <i *ngIf="option.icon" class="bwi {{ option.icon }}"></i>
+        <span [title]="option.label">{{ option.label }}</span>
+      </span>
+      <i *ngIf="option.children" class="bwi bwi-angle-right"></i>
+    </button>
+  </div>
 </bit-menu>
