Add outputs to inform the hosting component about certain events (submit, loading, disabled)
Emit successful Export

Expose a form-id so the hosting component can bind to this form

Fix name of output

--- a/libs/tools/export/vault-export/vault-export-ui/src/components/export.component.html
+++ b/libs/tools/export/vault-export/vault-export-ui/src/components/export.component.html
@@ -6,7 +6,7 @@
   *ngIf="!disabledByPolicy"
 ></tools-export-scope-callout>
 
-<form [formGroup]="exportForm" [bitSubmit]="submit">
+<form [formGroup]="exportForm" [bitSubmit]="submit" id="export_form_exportForm">
   <ng-container *ngIf="organizations$ | async as organizations">
     <bit-form-field *ngIf="organizations.length > 0">
       <bit-label>{{ "exportFrom" | i18n }}</bit-label>
