--- a/bitwarden_license/bit-web/src/app/admin-console/organizations/manage/device-approvals/device-approvals.component.html
+++ b/bitwarden_license/bit-web/src/app/admin-console/organizations/manage/device-approvals/device-approvals.component.html
@@ -31,6 +31,15 @@
           <button
             type="button"
             bitMenuItem
+            (click)="approveAllRequests()"
+            [disabled]="actionInProgress"
+          >
+            <i class="bwi bwi-fw bwi-check" aria-hidden="true"></i>
+            {{ "approveAllRequests" | i18n }}
+          </button>
+          <button
+            type="button"
+            bitMenuItem
             (click)="denyAllRequests()"
             [disabled]="actionInProgress"
           >
