--- a/apps/web/src/app/auth/settings/two-factor-email.component.html
+++ b/apps/web/src/app/auth/settings/two-factor-email.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formGroup" [bitSubmit]="submit" [appApiAction]="formPromise" *ngIf="authed">
+<form [formGroup]="formGroup" [bitSubmit]="submit" *ngIf="authed">
   <bit-dialog>
     <span bitDialogTitle>
       {{ "twoStepLogin" | i18n }}
