PM-2165 Added invalidSecret to form input

--- a/apps/web/src/app/auth/settings/account/delete-account-dialog.component.html
+++ b/apps/web/src/app/auth/settings/account/delete-account-dialog.component.html
@@ -6,6 +6,7 @@
       <app-user-verification-form-input
         formControlName="verification"
         name="verification"
+        [(invalidSecret)]="invalidSecret"
       ></app-user-verification-form-input>
     </ng-container>
     <ng-container bitDialogFooter>
